methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
 avance()
       ^SlugTracking:21: error: return outside method definition
    return caseVerte
    ^SlugTracking:29: error: return outside method definition
  return caseVerte 
  ^