methods.slug.SlugTracking.scala.code
var caseVerte = false

def isFacingTrail():Boolean = {
 setCouleurBrosse(Color.red : Color) 
 baisseBrosse()
 avance()
 avance()
 gauche()
 avance() 
 leveBrosse()
 avance()
}



  setCouleurBrosse(Color.green :Color)
  leveBrosse()
  caseVerte=false
  if (estFaceMur()){
    return caseVerte
  } else {
    avance()
    if (getCouleurSol() == Color.green ){
      caseVerte = true
      baisseBrosse()
    }
  }
  return caseVerte